--- a/privacy.html
+++ b/privacy.html
@@ -121,7 +121,10 @@
         margin-top: 40px;
         font-size: clamp(20px, 2.5vw, 24px);
     }
-    p { margin-bottom: 20px; }
+    p { margin-bottom: 20px; 
+        text-align: justify;
+        text-justify: inter-word;
+      }
     a { color: #333; border-bottom: 1px dotted #555; }
     a:hover { border-bottom: 1px solid #000; }
     header a, .footer-nav a { border-bottom: none; }
@@ -195,7 +198,7 @@
 
     <h2>9. Contact</h2>
     <p>For any privacy-related inquiries, please contact us at:<br>
-    Xtraxfin SA<br>
+    Xtraxfin AG<br>
     Email: <a href="mailto:privacy@bergvia.ch">privacy@bergvia.ch</a><br>
     Registered Office: Pfäffikon, SZ, Switzerland</p>
   </main>
