--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
       line-height: 1.45;
       color: #000000;
       text-shadow: none;
+      text-align: justify;
+      text-justify: inter-word; /* Enhances word spacing */
     }
 
     /* --- Responsive Behavior --- */
@@ -202,7 +204,7 @@
       <p>
         Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family.
         Our approach combines disciplined, long-term capital allocation across public and private markets with an entrepreneurial mindset,
-        directly acquiring and building operating businesses with strong growth potential. Through this blended strategy, we aim to create
+        directly acquiring and building operating businesses with strong growth potential. <br>Through this blended strategy, we aim to create
         lasting value for future generations, the communities where we live, and the natural environment that sustains us.
       </p>
     </div>
