--- a/index.html
+++ b/index.html
@@ -201,10 +201,8 @@
     <div class="hero-footer">
       <hr>
       <p>
-        Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family.
-        Our approach combines disciplined, long-term capital allocation across public and private markets with an entrepreneurial mindset,
-        directly acquiring and building operating businesses with strong growth potential. <br>Through this blended strategy, we aim to create
-        lasting value for future generations, the communities where we live and the natural environment that sustains us.
+        Bergvia is a privately held single family office based in Switzerland. We manage multi-generational capital across real estate, public markets and private equity, with the goal of creating lasting value for future generations, the communities in which we live and the natural environment that sustains us.
+ <br>Our approach combines an entrepreneurial mindset with the discipline of long-term capital stewardship. We invest patiently, selectively and with a clear focus on resilience, responsibility and enduring growth.
       </p>
     </div>
   </section>
@@ -215,7 +213,7 @@
       <a href="about.html">About</a>
       <a href="investments.html">Investments</a>
       <a href="contacts.html">Contacts</a>
-      <a href="privacy.html">Privacy Policy</a>
+      <a href="privacy.html">Legal&Privacy</a>
     </div>
     <p class="copyright">
       © 2025, Bergvia Family Office. All Rights Reserved.<br>
