--- a/about.html
+++ b/about.html
@@ -196,27 +196,44 @@
     <a href="contacts.html">Contacts</a>
   </div>
 
-  <main>
-    <section class="page-hero">
-      <div class="hero-content">
-        <h1>
-          A Legacy Forged in the Alps: Bergvia is the private investment office representing a family whose story has been written over three generations.
-        </h1>
-      </div>
-    </section>
-    <section class="page-content">
-      <p>  
-        Bergvia is the private investment office representing a family whose story has been written over three generations. Our roots are planted firmly in the Swiss and Italian Alps, a landscape that has not only shaped our family's rituals and stories but also instilled in us the values of resilience, foresight and an enduring respect for what is built to last.
-        <br>Our family’s wealth was built through the hard work and entrepreneurial spirit of earlier generations, who founded and led businesses in textiles and retail. In recent years, this legacy has evolved to include the technology sector and thoughtful investments in areas we believe in. Through every chapter, we’ve remained guided by the same values that shaped our family from the start: dedication, integrity and a long-term view. <br>This journey, marked by both success and the premature loss of loved ones, has taught us the profound importance of preserving capital not just as a financial asset, but as a testament to the effort and sacrifice of those who came before us.
-      </p>
-      <h2>Our Guiding Principles</h2>
-      <ul>
-        <li><strong>Long-term orientation:</strong> We provide patient capital, understanding that true, sustainable value is created over generations, not quarters.</li>
-        <li><strong>Entrepreneurial Partnership:</strong> We honor our heritage by engaging as active, hands-on partners, bringing our own experience as entrepreneurs and managers to support the companies we back.</li>
-        <li><strong>Responsible Stewardship:</strong> We are committed to contributing to the communities and environment in which we operate, ensuring that our growth is both meaningful and sustainable.</li>
-      </ul>
-    </section>
-  </main>
+<main>
+  <section class="page-hero">
+    <div class="hero-content">
+      <h1>
+        A Legacy Forged in the Alps.
+      </h1>
+    </div>
+  </section>
+
+  <section class="page-content">
+    <!-- Paragraph 1 -->
+    <p>
+      Bergvia is the private investment office representing a family whose story has been written over three generations. Our roots are planted firmly in the Swiss and Italian Alps, a landscape that has not only shaped our family's rituals and stories but also instilled in us the values of resilience, foresight, and an enduring respect for what is built to last.
+    </p>
+
+    <!-- Paragraph 2 -->
+    <p>
+      Our family’s wealth was built through the hard work and entrepreneurial spirit of earlier generations, who founded and led businesses in textiles and retail. In recent years, this legacy has evolved to include the technology sector and thoughtful investments in areas we believe in. Through every chapter, we’ve remained guided by the same values that shaped our family from the start: dedication, integrity, and a long-term view.
+    </p>
+
+    <!-- Paragraph 3 -->
+    <p>
+      This journey, marked by both success and the premature loss of loved ones, has taught us the profound importance of preserving capital not just as a financial asset, but as a testament to the effort and sacrifice of those who came before us.
+    </p>
+
+    <h2>Our Guiding Principles</h2>
+    <ul>
+      <li><strong>Long-term Orientation:</strong> We provide patient capital, understanding that true, sustainable value is created over generations, not quarters.</li>
+      <li><strong>Entrepreneurial Partnership:</strong> We honor our heritage by engaging as active, hands-on partners, bringing our own experience as entrepreneurs and managers to support the companies we back.</li>
+      <li><strong>Responsible Stewardship:</strong> We are committed to contributing to the communities and environment in which we operate, ensuring that our growth is both meaningful and sustainable.</li>
+    </ul>
+
+    <h2>Governance</h2>
+    <p>
+      Bergvia operates through a structured governance model, combining family leadership with external expertise when appropriate. Investment decisions follow a disciplined review process focused on risk control, liquidity, and long-term alignment with the family’s objectives.
+    </p>
+  </section>
+</main>
 
   <footer>
     <div class="footer-nav">
@@ -224,7 +241,7 @@
       <a href="about.html">About</a>
       <a href="investments.html">Investments</a>
       <a href="contacts.html">Contacts</a>
-      <a href="privacy.html">Privacy Policy</a>
+      <a href="privacy.html">Legal&Privacy</a>
     </div>
     <p class="copyright">
       © 2025, Bergvia Family Office. All Rights Reserved.<br>
