--- a/contacts.html
+++ b/contacts.html
@@ -191,20 +191,19 @@
   <main>
     <section class="page-hero">
       <div class="hero-content">
-        <h1>At Bergvia Family Office, we value meaningful relationships and long-term partnerships.</h1>
+        <h1>Meaningful Relationships. Long-term Partnerships.</h1>
       </div>
     </section>
 
     <section class="page-content">
         <p>
-          Contact
-        </p>
-        <p>
-          For any inquiries related to our activities, investment approach, or collaborations, please contact us by email. We welcome introductions that align with our values and our focus on sustainable, long-term value creation.
+          For inquiries related to our activities, investment approach, or collaborations, please contact us by email. We welcome introductions that align with our values and our focus on sustainable, long-term value creation.
         </p>
         <p>
           <strong>Bergvia Family Office</strong><br>
-          Switzerland<br>
+          Xtraxfin AG<br>
+Pfäffikon SZ, Switzerland<br>
+<br>
           📧 <a href="mailto:info@bergvia.ch">info@bergvia.ch</a>
         </p>
     </section>
@@ -216,7 +215,7 @@
       <a href="about.html">About</a>
       <a href="investments.html">Investments</a>
       <a href="contacts.html">Contacts</a>
-      <a href="privacy.html">Privacy Policy</a>
+      <a href="privacy.html">Legal&Privacy</a>
     </div>
     <p class="copyright">
       © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company managing the assets of a single family.
