--- a/privacy.html
+++ b/privacy.html
@@ -169,39 +169,27 @@
     <a href="contacts.html">Contacts</a>
   </div>
 
-  <main>
-    <h1>Privacy Policy</h1>
-    
-    <h2>1. Introduction</h2>
-    <p>This Privacy Policy describes how Bergvia (“Bergvia”, “we”, “our”, “us”) collects, uses, and protects personal data when you visit our website. We are committed to protecting your privacy and complying with applicable data protection laws, including the Swiss Federal Data Protection Act (FADP) and the EU General Data Protection Regulation (GDPR) where applicable.</p>
+<main>
+  <!-- Hero Section (Matches other pages) -->
+  <section class="page-hero">
+    <div class="hero-content">
+      <h1>Legal & Privacy</h1>
+    </div>
+  </section>
 
-    <h2>2. Data We Collect</h2>
-    <p>We do not collect personal data directly from you (such as through forms or newsletters). However, when you visit our website, certain technical information is automatically collected through Google Analytics, including: IP address (in anonymized form), browser type and version, device type and operating system, pages visited and time spent, and referring website or source. This information is used only for statistical and performance purposes to improve our website.</p>
+  <!-- Content Section -->
+  <section class="page-content">
+    <h2>Legal Notice</h2>
+    <p>
+      Bergvia Family Office is operated by Xtraxfin AG, a privately held Swiss company based in Pfäffikon SZ. We are not an investment fund and do not offer investment services to the public. All information on this website is provided for informational purposes only.
+    </p>
 
-    <h2>3. Use of Google Analytics</h2>
-    <p>We use Google Analytics, a web analytics service provided by Google LLC (“Google”). Google Analytics uses cookies or similar technologies to analyze how users interact with the site. We have configured Google Analytics to anonymize IP addresses and not share data with other Google services. You can prevent the use of Google Analytics cookies by adjusting your browser settings or by installing the Google Analytics Opt-out Browser Add-on.</p>
-
-    <h2>4. Data Retention</h2>
-    <p>Analytical data is retained only for as long as necessary to understand website usage trends — typically no more than 14 months, after which it is automatically deleted.</p>
-
-    <h2>5. Data Sharing</h2>
-    <p>We do not sell, rent, or trade any data. Access to analytics data is limited to authorized persons and our trusted service providers under strict confidentiality obligations.</p>
-
-    <h2>6. Your Rights</h2>
-    <p>Depending on your jurisdiction, you may have the right to: request access to the data we hold about you, request correction or deletion of your data, or object to or restrict certain processing activities. Requests can be sent to <a href="mailto:privacy@bergvia.com">privacy@bergvia.com</a>.</p>
-
-    <h2>7. Data Security</h2>
-    <p>We implement technical and organizational measures to ensure data security and prevent unauthorized access, loss, or misuse.</p>
-
-    <h2>8. Changes to This Policy</h2>
-    <p>We may update this Privacy Policy from time to time. The latest version will always be available on our website.</p>
-
-    <h2>9. Contact</h2>
-    <p>For any privacy-related inquiries, please contact us at:<br>
-    Xtraxfin AG<br>
-    Email: <a href="mailto:privacy@bergvia.ch">privacy@bergvia.ch</a><br>
-    Registered Office: Pfäffikon, SZ, Switzerland</p>
-  </main>
+    <h2>Privacy Notice</h2>
+    <p>
+      We process only the personal data necessary to respond to enquiries or maintain essential communication. We do not sell, share, or transfer personal data to third parties, except where required by Swiss law or essential service providers (e.g., hosting). All personal data is stored and processed in Switzerland. For any privacy-related questions, please contact: <a href="mailto:privacy@bergvia.ch">privacy@bergvia.ch</a>
+    </p>
+  </section>
+</main>
 
   <footer>
     <div class="footer-nav">
@@ -209,7 +197,7 @@
       <a href="about.html">About</a>
       <a href="investments.html">Investments</a>
       <a href="contacts.html">Contacts</a>
-      <a href="privacy.html">Privacy Policy</a>
+      <a href="privacy.html">Legal&Privacy</a>
     </div>
     <p class="copyright">
       © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company 
