--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
     }
     a { text-decoration: none; }
 
-    /* --- CORRECTED HEADER & NAVIGATION --- */
+    /* --- NAVIGATION STYLES --- */
     header {
       display: flex;
       justify-content: space-between;
@@ -25,6 +25,7 @@
       padding: 20px 40px;
       box-sizing: border-box;
       border-bottom: 1px solid #eee;
+      background: white;
     }
     .desktop-nav {
       display: flex;
@@ -47,12 +48,12 @@
       transition: 0.3s;
     }
 
-    /* --- CORRECTED MOBILE MENU BUTTON & PANEL --- */
+    /* --- MOBILE MENU --- */
     .mobile-menu-button {
       display: none;
       font-size: 32px;
       cursor: pointer;
-      color: #333; /* Black hamburger on white background */
+      color: #333;
       z-index: 2000;
     }
     .mobile-nav {
@@ -89,52 +90,76 @@
       font-weight: 300;
     }
 
-    /* --- CORRECTED Mobile Breakpoints --- */
     @media (max-width: 768px) {
       .desktop-nav { display: none; }
       .mobile-menu-button { display: block; }
       .logo img { height: 50px; }
       .mobile-nav { display: block; }
     }
-    @media (max-width: 480px) {
-      .logo img { height: 42px; }
+
+    /* --- MAIN LAYOUT STYLES (FIXED) --- */
+    main {
+      /* Allows the Hero section to go full width */
+      width: 100%;
+      margin: 0;
+      padding: 0;
     }
 
+    /* HERO SECTION (The Banner) */
+    .page-hero {
+      /* IMPORTANT: Replace 'images/hero.jpg' with your actual mountain image file */
+      background-image: url('images/hero.jpg'); 
+      background-color: #2c3e50; /* Fallback dark color */
+      background-size: cover;
+      background-position: center;
+      height: 300px; /* Height of the banner */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      width: 100%;
+    }
 
-    /* --- Main Content Area --- */
-    main {
+    .hero-content h1 {
+      color: white;
+      font-family: "Georgia", serif;
+      font-weight: normal;
+      font-size: clamp(28px, 3.5vw, 42px);
+      margin: 0;
+      padding: 0;
+      border: none; /* Removes the black line from generic styles */
+      text-shadow: 0 2px 4px rgba(0,0,0,0.5); /* Makes text readable on image */
+    }
+
+    /* TEXT CONTENT SECTION */
+    .page-content {
       max-width: 900px;
-      margin: 80px auto;
+      margin: 60px auto; /* Centers the text block vertically and horizontally */
       padding: 0 40px;
     }
-    h1 {
-        font-weight: normal;
-        color: #000;
-        margin-bottom: 40px;
-        border-bottom: 1px solid #ddd;
-        padding-bottom: 20px;
-        font-size: clamp(28px, 3.5vw, 38px);
-    }
+
     h2 {
         font-weight: normal;
         color: #000;
         margin-top: 40px;
         font-size: clamp(20px, 2.5vw, 24px);
+        text-align: left; /* Titles aligned left */
     }
-    p { margin-bottom: 20px; 
-        text-align: justify;
+
+    p { 
+        margin-bottom: 20px; 
+        text-align: justify; /* JUSTIFIES THE TEXT */
         text-justify: inter-word;
-      }
+    }
+
     a { color: #333; border-bottom: 1px dotted #555; }
     a:hover { border-bottom: 1px solid #000; }
     header a, .footer-nav a { border-bottom: none; }
 
-    /* --- Mobile adjustments for content --- */
+    /* --- Mobile adjustments --- */
     @media (max-width: 768px) {
-      main { padding: 0 20px; margin-top: 60px; }
-    }
-    @media (max-width: 480px) {
-      main { padding: 0 20px; margin-top: 40px; }
+      .page-content { padding: 0 20px; margin-top: 40px; }
+      .page-hero { height: 200px; }
     }
 
     /* --- Footer Styles --- */
@@ -149,6 +174,7 @@
   <header>
     <div class="logo">
       <a href="index.html">
+        <!-- Make sure this path is correct -->
         <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Logo">
       </a>
     </div>
@@ -170,14 +196,14 @@
   </div>
 
 <main>
-  <!-- Hero Section (Matches other pages) -->
+  <!-- Hero Section (Full Width Banner) -->
   <section class="page-hero">
     <div class="hero-content">
       <h1>Legal & Privacy</h1>
     </div>
   </section>
 
-  <!-- Content Section -->
+  <!-- Content Section (Centered & Justified Text) -->
   <section class="page-content">
     <h2>Legal Notice</h2>
     <p>
