--- a/privacy.html
+++ b/privacy.html
@@ -164,9 +164,26 @@
 
     /* --- Footer Styles --- */
     footer { text-align: center; font-size: 14px; padding: 40px 20px; background-color: #f8f8f8; border-top: 1px solid #ddd; font-family: sans-serif; }
-    .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; }
+     footer p {text-align: center !important;}
+  
+    .footer-nav {
+      display: flex;
+      justify-content: center; /* Forces the links to the center */
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 20px;
+    }
+
+    .footer-nav a { 
+      color: #555; 
+      text-decoration: none; 
+    }
     .footer-nav a:hover { color: #000; }
-    .copyright { margin-top: 20px; color: #999; }
+    
+    .copyright { 
+      color: #999; 
+      margin-top: 10px; 
+    }
   </style>
 </head>
 <body>
