--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - Bergvia Family Office</title>
+ 
+ <!-- --- FAVICON ADDED HERE --- -->
+  <link rel="icon" type="image/png" href="images/Bergvia_favicom_highres.png">
+  <link rel="apple-touch-icon" href="images/Bergvia_favicom_highres.png">
+  
   <style>
     /* --- General Body & Font Styles --- */
     body {
