--- a/investments.html
+++ b/investments.html
@@ -120,17 +120,18 @@
       background-position: center top;
       background-repeat: no-repeat;
       display: flex;
-      align-items: flex-start;
+      align-items: flex-end;
       justify-content: flex-start;
       position: relative;
       box-sizing: border-box;
     }
     .hero-content {
       max-width: 1300px;
-      padding: 400px 60px 0 260px;
+      padding: 0 60px 60px 260px;
       box-sizing: border-box;
       color: #ffffff;
       text-shadow: 0 2px 5px rgba(0,0,0,0.4);
+      width: 100%; /* Ensure it takes up space */
     }
     .hero-content h1 {
       font-weight: normal;
