--- a/contacts.html
+++ b/contacts.html
@@ -156,11 +156,26 @@
         border-bottom: 1px solid #000;
     }
     
-    /* --- Mobile adjustments for content (Untouched) --- */
-    @media (max-width: 1024px) { .hero-content { padding: 150px 40px 0 80px; } }
-    @media (max-width: 768px) { .page-hero { height: 60vh; } .hero-content { padding: 150px 30px 0 30px; } .page-content { padding: 0 30px; margin: 80px auto; } }
-    @media (max-width: 480px) { .page-hero { height: 50vh; } .hero-content { padding: 120px 20px 0 20px; } .page-content { padding: 0 20px; margin: 60px auto; } }
+   /* --- Mobile adjustments for content --- */
+    @media (max-width: 1024px) { 
+      /* Tablet: Adjust left padding to fit smaller screens */
+      .hero-content { padding: 0 60px 60px 80px; } 
+    }
 
+    @media (max-width: 768px) { 
+      .page-hero { height: 60vh; } 
+      /* MOBILE FIX: Changed bottom padding to 120px to push text HIGHER */
+      .hero-content { padding: 0 30px 120px 30px; } 
+      .page-content { padding: 0 30px; margin: 80px auto; } 
+    }
+
+    @media (max-width: 480px) { 
+      .page-hero { height: 50vh; } 
+      /* SMALL MOBILE FIX: Keep bottom padding high (100px) */
+      .hero-content { padding: 0 20px 100px 20px; } 
+      .page-content { padding: 0 20px; margin: 60px auto; } 
+    }
+    
     /* --- Footer (Untouched) --- */
     footer { text-align: center; font-size: 14px; padding: 40px 20px; background-color: #f8f8f8; border-top: 1px solid #ddd; font-family: sans-serif; }
     .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; }
