--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
     <div class="hero-footer">
       <hr>
       <p>
-        Bergvia is a privately held single family office based in Switzerland. We manage multi-generational capital across real estate, public markets and private equity, with the goal of creating lasting value for future generations, the communities in which we live and the natural environment that sustains us.
- <br>Our approach combines an entrepreneurial mindset with the discipline of long-term capital stewardship. We invest patiently, selectively and with a clear focus on resilience, responsibility and enduring growth.
+        Bergvia is a Swiss-based single family office managing proprietary, multi-generational capital across public markets, private markets and real estate. Our mandate is long-term capital preservation and compounding, guided by disciplined risk management and patience through cycles.
+        Bergvia does not raise third-party capital and does not provide investment services. This website is provided for information purposes only.
       </p>
     </div>
   </section>
@@ -222,7 +222,7 @@
     </div>
     <p class="copyright">
       © 2025, Bergvia Family Office. All Rights Reserved.<br>
-      Bergvia Family Office is a private investment company managing the assets of a single family.
+      Bergvia Family Office is the private investment office of a single family.
     </p>
   </footer>
 
