--- a/about.html
+++ b/about.html
@@ -251,7 +251,9 @@
 
     <h2>Governance</h2>
     <p>
-      Bergvia operates through a structured governance model, combining family leadership with external expertise when appropriate. Investment decisions follow a disciplined review process focused on risk control, liquidity, and long-term alignment with the family’s objectives.
+      Bergvia operates with structured governance and disciplined decision-making. Investment activity is guided by risk limits, liquidity planning, and long-term alignment with the family’s objectives. When appropriate, we rely on external specialist expertise (legal, tax, fiduciary, and sector-specific) while maintaining final responsibility within the family office.
+
+      Bergvia does not raise third-party capital and does not offer investment services to the public. This website is for information only.
     </p>
   </section>
 </main>
@@ -266,7 +268,7 @@
     </div>
     <p class="copyright">
       © 2025, Bergvia Family Office. All Rights Reserved.<br>
-      Bergvia Family Office is a private investment company managing the assets of a single family.
+      Bergvia Family Office is the private investment office of a single family.
     </p>
   </footer>
 
