--- a/investments.html
+++ b/investments.html
@@ -224,13 +224,18 @@
       <p>
         Bergvia has a diversified and flexible approach to navigating the complexities of the global markets. We blend investments in Real Estate, Public and Private markets with Direct Ownership of operating businesses.
       </p>
+      <p><strong>Mandate</strong> <p>
+        <p> Capital: proprietary, single-family
+            Horizon: long-term / multi-cycle
+            Strategy: public markets, private markets, real estate; selective direct ownership
+            Geography: Switzerland and Europe, with global exposure through public markets
+            Not in scope: third-party capital, fundraising, public solicitation
+           <p> 
       <p><strong>Public Markets:</strong> We invest in global listed equities and fixed income with patient capital focused on sustainable value creation. Our equity strategy is to be long-term owners of high-quality, well-managed businesses with durable competitive advantages and strong fundamentals. We prioritize deep research over reacting to short-term market volatility. In fixed income, our approach centers on capital preservation and stable income generation.</p>
       <p><strong>Real Estate:</strong> We invest in Real Estate for its tangible nature, stable income, and long-term appreciation. Our strategy focuses primarily on residential and commercial properties in Switzerland, avoiding speculative markets. Bergvia invests both directly and through trusted partnerships with specialized local developers.</p>
       <p><strong>Private Markets:</strong> We partner with a select and small group of asset managers in Switzerland and Europe. These relationships provide us with deep sector knowledge and access to a broad universe of opportunities in Private Equity, Venture Capital, Infrastructure and Real Assets.</p>
       <p><strong>Direct Ownership:</strong> Reflecting our entrepreneurial heritage, Bergvia also directly acquires, develops and nurtures operating businesses. In these ventures, we take an active, hands-on role, providing strategic guidance and patient capital to help strong management teams achieve their full potential. Our focus for direct investments is on Circular Economy, Beauty & Cosmetics, HealthTech and Digital Innovation.</p>
-      <p>
-        <strong>Strategic Agility:</strong> Our investment activity is defined by the powerful combination of strategic patience and entrepreneurial agility. As a family, we are not bound by short-term performance metrics, allowing us to invest with a true multi-generational horizon. We have the discipline to support our partners and companies through economic cycles. At the same time, our private and agile structure enables us to make swift, decisive commitments when we identify unique opportunities that align with our long-term vision. This is how we build resilient legacies—steadily, and one decision at a time.
-      </p>
+            </p>
        <h2>Risk Philosophy</h2>
       <p>
         Our main objectives are capital preservation and long-term sustainable growth. We maintain disciplined liquidity buffers, avoid excessive leverage and favour investments with resilient fundamentals. Every allocation decision is assessed through long-term scenarios, not short-term cycles.
@@ -239,6 +244,8 @@
       <p>
         For private and direct investments, we follow a structured process combining financial analysis, sector research and qualitative evaluation of people, governance and long-term alignment.
       </p>
+      <p><strong>Disclaimer:</strong> Nothing on this website constitutes investment advice, an offer, or a solicitation to buy or sell any security or to enter into any investment relationship.
+          <p>
     </section>
   </main>
   
@@ -251,7 +258,7 @@
       <a href="privacy.html">Legal&Privacy</a>
     </div>
     <p class="copyright">
-      © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company managing the assets of a single family.
+      © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is the private investment office of a single family.
     </p>
   </footer>
 
