--- a/contacts.html
+++ b/contacts.html
@@ -218,11 +218,11 @@
 
     <section class="page-content">
         <p>
-          For inquiries related to our activities, investment approach, or collaborations, please contact us by email. We welcome introductions that align with our values and our focus on sustainable, long-term value creation.
+          Bergvia maintains a limited public profile. For inquiries please contact us by email.
         </p>
         <p>
           <strong>Bergvia Family Office</strong><br>
-          Xtraxfin AG<br>
+          Operated by Xtraxfin AG<br>
 Pfäffikon SZ, Switzerland<br>
 <br>
           📧 <a href="mailto:info@bergvia.ch">info@bergvia.ch</a>
