--- a/privacy.html
+++ b/privacy.html
@@ -229,12 +229,25 @@
   <section class="page-content">
     <h2>Legal Notice</h2>
     <p>
-      Bergvia Family Office is operated by Xtraxfin AG, a privately held Swiss company based in Pfäffikon SZ. We are not an investment fund and do not offer investment services to the public. All information on this website is provided for informational purposes only.
+     This website (“Bergvia”) is operated by:
+
+      Xtraxfin AG
+      Weidstrasse 5, 8808 Pfäffikon SZ, Switzerland
+      UID/CHE: CHE-306.872.589
+      Commercial Register: Canton Schwyz
+
+Bergvia is a privately held single family office. We are not an investment fund and do not offer investment services to the public. Content is provided for informational purposes only.
     </p>
 
     <h2>Privacy Notice</h2>
     <p>
-      We process only the personal data necessary to respond to enquiries or maintain essential communication. We do not sell, share, or transfer personal data to third parties, except where required by Swiss law or essential service providers (e.g., hosting). All personal data is stored and processed in Switzerland. For any privacy-related questions, please contact: <a href="mailto:privacy@bergvia.ch">privacy@bergvia.ch</a>
+      Bergvia does not use cookies, analytics, tracking pixels, or advertising technologies on this website.
+
+      We process personal data only if you contact us (e.g., by email). In that case, we process the information you provide solely to respond to your enquiry and for essential correspondence. We do not sell personal data and we do not share it with third parties, except where required by law or to operate essential service providers.
+
+      This website is hosted by a third-party hosting provider. Server logs (e.g., IP address, time of access) may be processed by the hosting provider for security and operational purposes.
+
+      Privacy contact: privacy@bergvia.ch <a href="mailto:privacy@bergvia.ch">privacy@bergvia.ch</a>
     </p>
   </section>
 </main>
@@ -248,8 +261,7 @@
       <a href="privacy.html">Legal&Privacy</a>
     </div>
     <p class="copyright">
-      © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company 
-managing the assets of a single family.
+      © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is the private investment office of a single family.
     </p>
   </footer>
 
