--- a/investments.html
+++ b/investments.html
@@ -225,10 +225,10 @@
         Bergvia has a diversified and flexible approach to navigating the complexities of the global markets. We blend investments in Real Estate, Public and Private markets with Direct Ownership of operating businesses.
       </p>
       <p><strong>Mandate</strong> <p>
-        <p> Capital: proprietary, single-family
-            Horizon: long-term / multi-cycle
-            Strategy: public markets, private markets, real estate; selective direct ownership
-            Geography: Switzerland and Europe, with global exposure through public markets
+        <p> Capital: proprietary, single-family<br>
+            Horizon: long-term / multi-cycle<br>
+            Strategy: public markets, private markets, real estate; selective direct ownership<br>
+            Geography: Switzerland and Europe, with global exposure through public markets<br>
             Not in scope: third-party capital, fundraising, public solicitation
            <p> 
       <p><strong>Public Markets:</strong> We invest in global listed equities and fixed income with patient capital focused on sustainable value creation. Our equity strategy is to be long-term owners of high-quality, well-managed businesses with durable competitive advantages and strong fundamentals. We prioritize deep research over reacting to short-term market volatility. In fixed income, our approach centers on capital preservation and stable income generation.</p>
