--- a/privacy.html
+++ b/privacy.html
@@ -229,12 +229,12 @@
   <section class="page-content">
     <h2>Legal Notice</h2>
     <p>
-     This website (“Bergvia”) is operated by:
+     This website (“Bergvia”) is operated by:<br>
 
-      Xtraxfin AG
-      Weidstrasse 5, 8808 Pfäffikon SZ, Switzerland
-      UID/CHE: CHE-306.872.589
-      Commercial Register: Canton Schwyz
+      Xtraxfin AG<br>
+      Weidstrasse 5, 8808 Pfäffikon SZ, Switzerland<br>
+      UID/CHE: CHE-306.872.589<br>
+      Commercial Register: Canton Schwyz<br>
 
 Bergvia is a privately held single family office. We are not an investment fund and do not offer investment services to the public. Content is provided for informational purposes only.
     </p>
