--- a/privacy.html
+++ b/privacy.html
@@ -234,18 +234,18 @@
       Xtraxfin AG<br>
       Weidstrasse 5, 8808 Pfäffikon SZ, Switzerland<br>
       UID/CHE: CHE-306.872.589<br>
-      Commercial Register: Canton Schwyz<br>
+      Commercial Register: Canton Schwyz<br><br>
 
 Bergvia is a privately held single family office. We are not an investment fund and do not offer investment services to the public. Content is provided for informational purposes only.
     </p>
 
     <h2>Privacy Notice</h2>
     <p>
-      Bergvia does not use cookies, analytics, tracking pixels, or advertising technologies on this website.
+      Bergvia does not use cookies, analytics, tracking pixels, or advertising technologies on this website.<br>
 
-      We process personal data only if you contact us (e.g., by email). In that case, we process the information you provide solely to respond to your enquiry and for essential correspondence. We do not sell personal data and we do not share it with third parties, except where required by law or to operate essential service providers.
+      We process personal data only if you contact us (e.g., by email). In that case, we process the information you provide solely to respond to your enquiry and for essential correspondence. We do not sell personal data and we do not share it with third parties, except where required by law or to operate essential service providers.<br>
 
-      This website is hosted by a third-party hosting provider. Server logs (e.g., IP address, time of access) may be processed by the hosting provider for security and operational purposes.
+      This website is hosted by a third-party hosting provider. Server logs (e.g., IP address, time of access) may be processed by the hosting provider for security and operational purposes.<br>
 
       Privacy contact: privacy@bergvia.ch <a href="mailto:privacy@bergvia.ch">privacy@bergvia.ch</a>
     </p>
