--- a/privacy.html
+++ b/privacy.html
@@ -245,7 +245,7 @@ Bergvia is a privately held single family office. We are not an investment fund 
 
       We process personal data only if you contact us (e.g., by email). In that case, we process the information you provide solely to respond to your enquiry and for essential correspondence. We do not sell personal data and we do not share it with third parties, except where required by law or to operate essential service providers.<br>
 
-      This website is hosted by a third-party hosting provider. Server logs (e.g., IP address, time of access) may be processed by the hosting provider for security and operational purposes.<br>
+      This website is hosted by a third-party hosting provider. Server logs (e.g., IP address, time of access) may be processed by the hosting provider for security and operational purposes.<br><br>
 
       Privacy contact: privacy@bergvia.ch <a href="mailto:privacy@bergvia.ch">privacy@bergvia.ch</a>
     </p>
